# ghost-link

./: docker-compose.yml
backend/: .env  .env.example  main.py  requirements.txt
backend/api/routes/: planner.py
backend/core/: database.py  entity_graph.py  event_queue.py  kdtree.py
backend/data/: ingest_airports.py  ingest_bases.py  military_bases_supplement.json  seed.py  weapons.json  world_bases.json
backend/simulation/: assignment.py  astar.py  planner.py  routing.py  suda.py
backend/tests/: test_coordination.py
engine/: Cargo.toml
engine/benches/: physics_bench.rs  tot_bench.rs
engine/src/: lib.rs  physics.rs  saturation.rs  tot.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/kinetic/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/missions/: page.tsx
frontend/src/app/missions/[id]/: page.tsx
frontend/src/components/map/: CesiumGlobe.tsx
frontend/src/components/panels/: EngagementLog.tsx  EntityInspector.tsx  PlannerChat.tsx  SaturationMeter.tsx  TotConvergencePanel.tsx
frontend/src/data/: weaponCompatibility.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: entityGraph.ts
