[package]
name = "ghost-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "ghost_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
nalgebra = "0.33"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_bench"
harness = false

[[bench]]
name = "tot_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
